--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <link href="{% static 'main/css/login.css' %}" rel="stylesheet" />
-    <link href="{% static 'main/css/register.css' %}" rel="stylesheet" />
+    <!-- <link href="{% static 'main/css/register.css' %}" rel="stylesheet" /> -->
     <!-- <style>
         :root {
             --background-image-url: url("{% static 'img/back.webp' %}");
