--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,24 +1,33 @@
 <!-- login.html -->
-{% extends "main/base.html" %}
-{% load static %}
-{% block title %}Login{% endblock %}
-
-{% block container %}
-    <div class="login-container">
+{% extends "main/base.html" %} {% load static %} {% block title%}Login{%endblock%} {% block container %}
+<section id="login-section">
+    <div class="login-container1">
+        <h3>Comencemos</h3>
         <form action="" method="POST">
-            {% csrf_token %}
-            <div class="input-container">
-                <div class="input-content">
-                    <div class="input-dist">
-                        <div class="input-type">
-                            <input class="input-is" type="email" required="" placeholder="Correo" name="email" />
-                            <input class="input-is" type="password" required="" placeholder="Contraseña" name="password" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="submit-button" type="submit">Iniciar Sesión</button>
+          {% csrf_token %}
+          <div class="input-type">
+            <input
+              class="input-is"
+              type="email"
+              required=""
+              placeholder="Correo"
+              name="email"
+            />
+            <input
+              class="input-is"
+              type="password"
+              required=""
+              placeholder="Contraseña"
+              name="password"
+            />
+          </div>
+          <button style="height: fit-content;" class="submit-button" type="submit">Iniciar Sesión</button>
+          <div class="third-line-form"><strong>¿No tienes cuenta?</strong><a href="{% url 'register' %}"> Regístrate aquí</a></div>
         </form>
-        <a href="{% url 'register' %}">¿No tienes cuenta? Regístrate aquí</a>
-    </div>
+      </div>
+      <div class="login-container2">
+        <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo">
+        <h1>Clipgen Ai</h1>
+      </div>
+</section>
 {% endblock %}
