--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -8,8 +8,8 @@
   --greenFull4: #7f965e;
   --greenFull5: #ccdea1;
   /* FONTS */
-  --funnel: "Funnel Display", serif;
-  --roboto: "Roboto", serif;
+  --main: "Funnel Display", serif;
+  --second: "Roboto", serif;
 }
 
 * {
@@ -19,6 +19,27 @@
 
   a {
     text-decoration: none;
+  }
+
+  /* Estilo de la scrollbar */
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+
+  /* Estilo del track (fondo de la scrollbar) */
+  ::-webkit-scrollbar-track {
+    background: black;
+  }
+
+  /* Estilo del thumb (parte que se mueve) */
+  ::-webkit-scrollbar-thumb {
+    background: var(--greenFull2);
+  }
+
+  /* Estilo del thumb al pasar el mouse */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--greenFull4); /* Color del thumb al pasar el mouse */
   }
 }
 
@@ -33,7 +54,11 @@ body {
   margin: 0;
   padding-top: 70px;
   overflow-y: auto;
-  font-family: var(--roboto);
+  font-family: var(--second);
+  ::-webkit-scrollbar {
+    width: 12px; /* Ancho de la scrollbar */
+    height: 12px; /* Altura de la scrollbar */
+  }
 }
 
 /* NAVBAR */
@@ -63,7 +88,7 @@ nav {
     a {
       text-decoration: none;
       color: var(--greenFull5);
-      font-family: var(--funnel);
+      font-family: var(--main);
     }
 
     a:hover {
@@ -89,7 +114,7 @@ nav {
     margin-top: 100px;
     width: 80%;
     h1 {
-      font-family: var(--funnel);
+      font-family: var(--main);
       font-weight: bold;
       font-size: 65px;
       text-align: right;
@@ -107,7 +132,7 @@ nav {
     h3 {
       text-align: right;
       color: var(--greenFull3);
-      font-family: var(--roboto);
+      font-family: var(--second);
       font-weight: bold;
       font-size: 40px;
       font-weight: 200;
@@ -119,7 +144,7 @@ nav {
     border-radius: 5px;
     background-color: var(--greenFull4);
     color: black;
-    font-family: var(--funnel);
+    font-family: var(--main);
     transition: 0.6s;
   }
 
@@ -847,15 +872,6 @@ button:hover #clip {
   border-radius: 5rem;
 }
 
-strong {
-  z-index: 2;
-  font-family: "Avalors Personal Use";
-  font-size: 18px;
-  letter-spacing: 1px;
-  color: #ffffff;
-  text-shadow: 0 0 4px white;
-}
-
 #glow {
   position: absolute;
   display: flex;
@@ -1096,66 +1112,124 @@ strong {
 /* El contenedor donde se añaden los planes */
 /* El overlay */
 .panel-upgrade {
+  /* border: 1px solid gold;
+  * {
+    border: 1px solid gold;
+  } */
+
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(25px) saturate(180%);
+  -webkit-backdrop-filter: blur(25px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0);
   z-index: 9999;
+  display: flex;
+  align-items: center;
+  overflow-y: scroll;
 }
 
 /* Deja que el contenido se ajuste a su ancho */
 .panel-upgrade-content {
   display: block;
-  max-width: 60%;
-  margin: 60px auto;
+  max-width: 90%;
+  margin: 0px auto;
   padding: 20px;
   border-radius: 8px;
   box-sizing: border-box;
 
-  /* Fondo con capa oscura y la misma imagen que el body */
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    var(--background-image-url);
+  background: transparent;
+  .title-upgrade-panel {
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    color: var(--greenFull5);
+    font-weight: bold;
+    font-size: 2rem;
+    font-family: var(--main);
+  }
+  .close-panel {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    padding: 5px;
+    background: transparent;
+    transition: 0.6s;
+    width: 20px;
+  }
 
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  .close-panel:hover {
+    transition: 0.6s;
+    transform: scale(1.2);
+  }
 }
 
 /* El contenedor donde se añaden los planes */
 #plansContainer {
+  left: 0;
   display: flex;
-
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
+
+  /* Estilo del track (fondo de la scrollbar) */
+  #plansContainer::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color del track */
+  }
+
+  /* Estilo del thumb (parte que se mueve) */
+  #plansContainer::-webkit-scrollbar-thumb {
+    background: #888; /* Color del thumb */
+    border-radius: 6px; /* Bordes redondeados */
+  }
+
+  /* Estilo del thumb al pasar el mouse */
+  #plansContainer::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color del thumb al pasar el mouse */
+  }
 }
 
 /* Cada tarjeta (plan) */
 .plan-item {
-  border: 2px solid #76c133;
+  border: 2px solid var(--greenFull5);
   border-radius: 8px;
-  background-color: #1e1e1e;
+  background-color: black;
   padding: 15px;
   color: #ffffff;
   animation: fadeIn 0.5s ease-in-out;
 
-  flex: 0 0 30%;
-  min-width: 250px;
-  max-width: 300px;
-  box-sizing: border-box;
+  /* * {
+    border: 1px solid red;
+  } */
 }
 
 .plan-item h3 {
-  margin-top: 0;
-  font-size: 1.5rem;
-  color: #87f414;
+  margin: 0;
+  font-size: 1.8rem;
+  color: var(--greenFull4);
+  font-family: var(--main);
+  font-weight: bold;
+}
+
+.plan-item > p {
+  color: var(--greenFull5);
+  font-family: var(--second);
+  font-size: 20px;
+}
+
+.plan-item > p:nth-child(3) {
+  font-size: 1.2rem;
+  font-weight: 200;
+  font-family: var(--second);
+  color: var(--greenFull5);
+  padding: 0;
 }
 
 .plan-item button {
-  background-color: #0a6207;
+  background-color: var(--greenFull4);
   color: #ffffff;
   border: none;
   border-radius: 5px;
@@ -1163,10 +1237,11 @@ strong {
   padding: 10px 20px;
   cursor: pointer;
   margin-top: 10px;
+  color: black;
 }
 
 .plan-item button:hover {
-  background-color: #0b340f;
+  background-color: var(--greenFull5);
 }
 
 /* Animación de entrada */
