--- a/static/main/css/login.css
+++ b/static/main/css/login.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 :root {
   /* PALETA DE COLORES */
@@ -8,7 +9,7 @@
   --greenFull4: #7f965e;
   --greenFull5: #ccdea1;
   /* FONTS */
-  --main: "Funnel Display", serif;
+  --main: "Nunito", serif;
   --second: "Roboto", serif;
 }
 
@@ -67,7 +68,6 @@
     }
     a:hover {
       color: var(--greenFull5);
-      transform: scale(1.1);
     }
 
     .third-line-form {
