--- a/templates/main/sobre.html
+++ b/templates/main/sobre.html
@@ -4,8 +4,8 @@
 {% block title %}Sobre Clipgen.ai{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<section class="sobre-section">
     <h1>Sobre Clipgen.ai</h1>
     <p>Aquí vamos a agregar informacion sobre la aplicacion.</p>
-</div>
+</section>
 {% endblock %}
