--- a/static/main/css/login.css
+++ b/static/main/css/login.css
@@ -14,68 +14,74 @@
 }
 
 #login-section {
-  width: 98%;
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  position: fixed;
+  z-index: 2001;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
   padding: 25px;
   border-radius: 5px;
-  margin: 20px auto;
-  border: 1px solid var(--greenFull1);
-
-  /* * {
+  backdrop-filter: blur(25px) saturate(180%);
+  -webkit-backdrop-filter: blur(25px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0);
+  /* border: 1px solid red;
+  * {
     border: 1px solid gold;
   } */
 }
 
-.login-container1 {
-  font-family: var(--second);
-  font-style: italic;
-  font-weight: bold;
+#close-modal-login {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+form {
+  background-color: transparent;
+  border: 1px solid var(--greenFull4);
+  border-radius: 10px;
   display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: nowrap;
   flex-direction: column;
-  box-shadow: none;
-  padding: 1.5em;
-  width: 100%;
-  height: 100%;
+  gap: 5px;
+  width: 450px;
+  position: relative;
+  padding: 35px 25px;
 
   h3 {
     font-family: var(--main);
     font-weight: bold;
     font-size: 35px;
-    color: var(--greenFull4);
+    color: white;
+    margin-bottom: 25px;
   }
+}
 
-  form {
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 300px;
-
-    a {
-      color: var(--greenFull4);
-      font-weight: bold;
-      font-size: 17px;
-      text-decoration: none;
-      transition: 0.5s;
-      font-family: var(--second);
-      text-align: right;
-    }
-    a:hover {
-      color: var(--greenFull5);
-    }
-
-    .third-line-form {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
+.third-line-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 0;
+  a {
+    color: var(--greenFull4);
+    font-weight: bold;
+    font-size: 17px;
+    text-decoration: none;
+    transition: 0.5s;
+    font-family: var(--second);
+    text-align: right;
+  }
+  a:hover {
+    color: var(--greenFull5);
   }
 }
 
@@ -98,16 +104,6 @@
   text-align: left;
 }
 
-.input-is:hover {
-}
-
-.input-is:focus {
-}
-
-.input-is::select {
-  /* border: 1px solid gold; */
-}
-
 .input-is::placeholder {
   font-weight: bold;
 }
@@ -116,70 +112,25 @@
   width: 100%;
   border-radius: 5px;
   padding: 0;
-  background-color: var(--greenFull4);
+  background-color: white;
   color: black;
   transition: 0.5s;
   padding: 10px 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  img {
+
+    width: 25px;  
+  }
 }
 
 .submit-button:hover {
-  background-color: var(--greenFull5);
+  background-color: var(--greenFull4);
 }
-
-/* @keyframes backglitch {
-  0% {
-    box-shadow: inset 0px 20px 20px 30px #212121;
-  }
-
-  50% {
-    box-shadow: inset 0px -20px 20px 30px hsl(297, 42%, 10%);
-  }
-
-  to {
-    box-shadow: inset 0px 20px 20px 30px #212121;
-  }
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg) translate(-50%, 20%);
-  }
-
-  50% {
-    transform: rotate(180deg) translate(40%, 10%);
-  }
-
-  to {
-    transform: rotate(360deg) translate(-50%, 20%);
-  }
-}
-
-@keyframes blinkShadowsFilter {
-  0% {
-    filter: drop-shadow(46px 36px 28px rgba(39, 195, 159, 0.3411764706))
-      drop-shadow(-55px -40px 28px #0a6207);
-  }
-
-  25% {
-    filter: drop-shadow(46px -36px 24px rgba(39, 195, 159, 0.8980392157))
-      drop-shadow(-55px 40px 24px #0a6207);
-  }
-
-  50% {
-    filter: drop-shadow(46px 36px 30px rgba(39, 195, 159, 0.8980392157))
-      drop-shadow(-55px 40px 30px rgba(10, 98, 7, 0.2941176471));
-  }
-
-  75% {
-    filter: drop-shadow(20px -18px 25px rgba(39, 195, 159, 0.8980392157))
-      drop-shadow(-20px 20px 25px rgba(10, 98, 7, 0.2941176471));
-  }
-
-  to {
-    filter: drop-shadow(46px 36px 28px rgba(39, 195, 159, 0.3411764706))
-      drop-shadow(-55px -40px 28px #0a6207);
-  }
-} */
 
 .login-container2 {
   display: flex;
@@ -190,21 +141,7 @@
   width: 100%;
   border-radius: 15px;
   background-color: var(--greenFull4);
-  /* box-shadow: 1px 1px 5px var(--greenFull5); */
-  /* background: rgb(204, 222, 161);
-  background: linear-gradient(
-    90deg,
-    rgba(204, 222, 161, 1) 0%,
-    rgba(75, 97, 60, 1) 9%,
-    rgba(127, 150, 94, 1) 20%,
-    rgba(204, 222, 161, 1) 32%,
-    rgba(75, 97, 60, 1) 46%,
-    rgba(127, 150, 94, 1) 61%,
-    rgba(204, 222, 161, 1) 74%,
-    rgba(75, 97, 60, 1) 88%,
-    rgba(204, 222, 161, 1) 100%
-  ); */
-  /* background-color: var(--greenFull5); */
+
   img {
     width: 300px;
   }
@@ -213,15 +150,6 @@
     font-weight: 4rem;
     font-weight: bold;
     font-family: var(--main);
-    color: var(--greenFull2);
-    background: linear-gradient(
-      90deg,
-      var(--greenFull5),
-      var(--greenFull2),
-      var(--greenFull1)
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    color: black;
   }
 }
