--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -3,14 +3,16 @@
 {% block title %}Registro{% endblock %}
 {% block content %}
 <div class="register-container">
-  <h2>Crear cuenta</h2>
+  <span id="close-modal-register" onclick="showRegister()" ><i class="fa-solid fa-xmark"></i></span>
   <form method="POST">
+
+    <h2>Crear cuenta</h2>
     <input type="text" name="username" placeholder="Nombre de usuario">
     <input type="email" name="email" placeholder="Correo electrónico">
     <input type="password" name="password" placeholder="Contraseña">
     <input type="password" name="password2" placeholder="Repetir contraseña">
     <button class="submit-button" type="submit">Registrarse</button>
   </form>
-  <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p>
+  <div><p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p></div>
 </div>
 {% endblock %}
